--- a/time-off-management/src/main/resources/application.properties
+++ b/time-off-management/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/employee_leave
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
 
